--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,10 +99,7 @@ body {
 .header .header_list li:last-child:hover {
   color: #000;
 }
-.header .header_list li input:checked ~ label .fa-bars {
-  display: none;
-}
-.header .header_list li input:checked ~ label .fa-x {
+.header .header_list li input:checked ~ .burger_menu .fa-x, .header .header_list li input:checked ~ .burger_menu .logo {
   display: block;
 }
 .header .header_list img {
@@ -181,8 +178,11 @@ body {
 }
 #first .boxes img {
   width: 100%;
+  border-radius: 10px;
+  background: rgba(158, 158, 158, 0.5411764706);
 }
 #first .boxes .box {
+  transition: 0.3s;
   cursor: pointer;
   padding: 0 15px;
   border-radius: 5px;
@@ -194,6 +194,12 @@ body {
   justify-content: center;
   font-weight: 600;
   font-size: 18px;
+}
+#first .boxes .box:hover {
+  transform: scale(1.1);
+}
+#first .boxes .box:hover img {
+  box-shadow: 0 0 15px 1px black;
 }
 
 #second {
@@ -356,12 +362,30 @@ body {
   .header ul .burger_menu {
     transition: 1s !important;
   }
+  .header ul .burger_head {
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    font-size: 24px;
+    font-style: normal;
+  }
+  .header ul .burger_head img {
+    height: 50px !important;
+    width: 75px;
+  }
+  .header ul input:checked ~ .burger_menu .d-none {
+    display: flex;
+    flex-direction: column;
+  }
   .header ul input:checked ~ .burger_menu {
     overflow: hidden;
     left: 0;
     position: fixed;
     width: 100%;
-    height: 93%;
+    height: 100vh !important;
     bottom: 0;
     background: #333;
     z-index: 3;
@@ -474,12 +498,30 @@ body {
   .header ul .burger_menu {
     transition: 1s !important;
   }
+  .header ul .burger_head {
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    font-size: 24px;
+    font-style: normal;
+  }
+  .header ul .burger_head img {
+    height: 50px !important;
+    width: 75px;
+  }
+  .header ul input:checked ~ .burger_menu .d-none {
+    display: flex;
+    flex-direction: column;
+  }
   .header ul input:checked ~ .burger_menu {
     overflow: hidden;
     left: 0;
     position: fixed;
     width: 100%;
-    height: 93%;
+    height: 100%;
     bottom: 0;
     background: #333;
     z-index: 3;
@@ -606,12 +648,30 @@ body {
   .header ul .burger_menu {
     transition: 1s !important;
   }
+  .header ul .burger_head {
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    font-size: 24px;
+    font-style: normal;
+  }
+  .header ul .burger_head img {
+    height: 50px !important;
+    width: 75px;
+  }
+  .header ul input:checked ~ .burger_menu .d-none {
+    display: flex;
+    flex-direction: column;
+  }
   .header ul input:checked ~ .burger_menu {
     overflow: hidden;
     left: 0;
     position: fixed;
     width: 100%;
-    height: 93%;
+    height: 100%;
     bottom: 0;
     background: #333;
     z-index: 3;
