--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -55,6 +55,10 @@ body {
                 position: relative;
                 outline: none;
                 padding-left: 4%;
+                transition: 1s; 
+                &:valid ~ label {
+                    display: none;
+                }
             }
 
             label {
@@ -87,7 +91,7 @@ body {
             overflow: hidden;
 
             li {
-
+                transition: .3s;
                 height: 50px;
                 width: 100vw;
                 display: none !important;
@@ -231,16 +235,17 @@ body {
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             font-weight: 600;
             font-size: 18px;
 
             &:hover {
-                img {
-                    box-shadow: 0 0 15px 1px black;
-                }
+                box-shadow: 5px 5px 5px .5px rgba(0, 0, 0, 0.39);
+                transform: scale(1.05);
+            }
 
-                transform: scale(1.1);
+            p {
+                height: 66px;
             }
         }
     }
@@ -819,8 +824,6 @@ body {
 @media screen and (max-width: 400px) {
     .container {
         width: 95%;
-        display: flex;
-        justify-content: center;
     }
 
     .header {
@@ -964,6 +967,10 @@ body {
             img {
                 width: 100%;
                 height: 100%;
+            }
+
+            p {
+                height: auto !important;
             }
         }
     }
