--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -54,9 +54,13 @@ body {
                 border-radius: 5px;
                 position: relative;
                 outline: none;
+                border: none;
                 padding-left: 4%;
-                transition: 1s; 
-                &:valid ~ label {
+                transition: 1s;
+                border: 1px solid #999;
+                border-radius: 5px;
+
+                &:valid~label {
                     display: none;
                 }
             }
@@ -229,7 +233,6 @@ body {
             transition: .3s;
             cursor: pointer;
             padding: 0 15px;
-            border-radius: 5px;
             height: 400px;
             width: 25%;
             display: flex;
