--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,8 +50,11 @@ body {
   border-radius: 5px;
   position: relative;
   outline: none;
+  border: none;
   padding-left: 4%;
   transition: 1s;
+  border: 1px solid #999;
+  border-radius: 5px;
 }
 .header .search .searchbar input:valid ~ label {
   display: none;
@@ -190,7 +193,6 @@ body {
   transition: 0.3s;
   cursor: pointer;
   padding: 0 15px;
-  border-radius: 5px;
   height: 400px;
   width: 25%;
   display: flex;
